<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/alpine_debugging_preferences_title"
        app:summary="@string/alpine_debugging_preferences_summary"
        app:fragment="com.alpine.app.fragments.settings.alpine.DebuggingPreferencesFragment"/>

    <Preference
        app:title="@string/alpine_terminal_io_preferences_title"
        app:summary="@string/alpine_terminal_io_preferences_summary"
        app:fragment="com.alpine.app.fragments.settings.alpine.TerminalIOPreferencesFragment"/>

    <Preference
        app:title="@string/alpine_terminal_view_preferences_title"
        app:summary="@string/alpine_terminal_view_preferences_summary"
        app:fragment="com.alpine.app.fragments.settings.alpine.TerminalViewPreferencesFragment"/>

</PreferenceScreen>
